--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1 class="header_text">Do you wanna meet tommorow for only 5 min, Yashu ji? Please...</h1>
     </div>
     <p>
-      <a href="https://www.instagram.com/untoldcoding/">@bittu's_codes</a>
+      <a href="https://www.instagram.com/itz_bittu_sharma___?igsh=bTk1djdtbHg4ZG11">@bittu's_codes</a>
     </p>
     <div class="gif_container">
       <img
